# lsim

./: Cargo.toml  README.md
src/: main.rs
src/sim/: gates.rs
src/sim/nodes/: and.rs  io.rs  mod.rs  not.rs  or.rs
src/util/: input.rs
